ukui-bluetooth (1.0.0-1kylin1k55) v101; urgency=medium

  * Bug  :
    - bug#55777 发送文件-选择文件窗口，窗口右边没有显示插入系统的U盘
    - bug#61036 电脑开启蓝牙，使用手机连接此蓝牙，弹出pin码后，手机端点击取消，电脑端提示“连接超时”
  * Task :
  * Other:

 -- guang tang <tangguang@kylinos.cn>  Fri, 02 Jul 2021 20:22:56 +0800

ukui-bluetooth (1.0.0-1kylin1k54) v101; urgency=medium

  * Bug  :
  * Task :
  * Other:
    - 0630未通关bug的修改
    - bug#63674 手机与系统蓝牙配对超时后，1分钟之后点击确认，ukui-bluetooth会出现段错误(Li Xiang)
    - bug#63675 手机与系统蓝牙配对，点击取消配对后，手机的蓝牙未从配对列表移除(Li Xiang)
    - bug#63708 【蓝牙】使用rfkill重启软连接之后，重启系统蓝牙核心转储(Deng Tuo)

 -- 李享 <lixiang1@kylinos.cn>  Thu, 01 Jul 2021 21:10:34 +0800

ukui-bluetooth (1.0.0-1kylin1k53) v101; urgency=medium

  * Bug  :
    - bug#63674 手机与系统蓝牙配对超时后，1分钟之后点击确认，ukui-bluetooth会出现段错误(lixiang)
    - bug#63675 手机与系统蓝牙配对，点击取消配对后，手机的蓝牙未从配对列表移除(lixiang)
  * Task :
  * Other: 

 -- guang tang <tangguang@kylinos.cn>  Wed, 30 Jun 2021 08:37:51 +0800

ukui-bluetooth (1.0.0-1kylin1k52) v101; urgency=medium

  * Bug  :
    - bug#63015/bug#62800 已连接过的蓝牙鼠标，移除后再次连接时会弹出两个连接成功的通知
    - bug#63851 深色主题下，文件传输界面文本.log、视频文件图标未反白 
  * Task :
  * Other:

 -- guang tang <tangguang@kylinos.cn>  Mon, 28 Jun 2021 16:34:26 +0800

ukui-bluetooth (1.0.0-1kylin1k51) v101; urgency=medium

  * Bug  :
    - bug#63127 深色主题下，文件传输界面wps文件图标未反白
    - bug#63068 发送的文件名称中存在空格时，在传输界面显示“%20”
    - bug#62801 以蓝牙开启状态重启后，蓝牙为关闭状态，任务栏蓝牙图标为开启
    - bug#59301 传输成功小窗未关闭，无法进行再一次传输(dengtuo)
  * Task :
  * Other:

 -- guang tang <tangguang@kylinos.cn>  Thu, 24 Jun 2021 11:16:31 +0800

ukui-bluetooth (1.0.0-1kylin1k50) v101; urgency=medium

  * Bug  :
    -  bug#59301 传输成功小窗未关闭，无法进行再一次传输(dengtuo)
    -  bug#63109 控制面板、托盘处蓝牙的状态与任务栏显示的状态不一致
  * Task :
  * Other: 

 -- guang tang <tangguang@kylinos.cn>  Wed, 23 Jun 2021 09:44:36 +0800

ukui-bluetooth (1.0.0-1kylin1k49) v101; urgency=medium
  
  * Bug  :
    - bug#59337 【通知】连接成功的语句不通顺，需去掉“的” (lizhuoheng)
    - bug#59653  CPM蓝牙关开，鼠标回连需要12s (dengtuo)
  * Task :
  * Other:
