@@ -25,6 +25,14 @@ FeaturesWidget::FeaturesWidget(QWidget *parent)
     }
     //========================END=================================
 
+    obex_manager = new BluezQt::ObexManager(this);
+    BluezQt::InitObexManagerJob *obex_job = obex_manager->init();
+    obex_job->exec();
+    qDebug() << Q_FUNC_INFO << obex_manager->isInitialized() << obex_manager->isOperational() << obex_manager->sessions().size();
+    connect(obex_manager,&BluezQt::ObexManager::sessionAdded,this,&FeaturesWidget::file_transfer_session_add);
+
+    InitAgentAndDbus();
+    M_registerAgent();
 
     //==============获取gsettings的配置信息==========================
     if(QGSettings::isSchemaInstalled("org.ukui.bluetooth")){
@@ -40,13 +48,6 @@ FeaturesWidget::FeaturesWidget(QWidget *parent)
         connect(settings, &QGSettings::changed,this,&FeaturesWidget::GSettings_value_chanage);
     }
     //========================END===================================
-
-    session_dbus = new BluetoothDbus(this);
-    connect(session_dbus,&BluetoothDbus::ConnectTheSendingDevice,this,&FeaturesWidget::Pair_device_by_address);
-    connect(session_dbus,&BluetoothDbus::DisconnectTheSendingDevice,this,&FeaturesWidget::Disconnect_device_by_address);
-    connect(session_dbus,&BluetoothDbus::RemoveTheSendingDevice,this,&FeaturesWidget::Remove_device_by_address);
-    connect(session_dbus,&BluetoothDbus::sendTransferMesg,this,&FeaturesWidget::Dbus_file_transfer);
-    connect(session_dbus,&BluetoothDbus::switch_signals,this,&FeaturesWidget::Dbus_bluetooth_switch);
 
     if(m_manager->adapters().size()){
         adapter_list.clear();
@@ -75,55 +76,20 @@ FeaturesWidget::FeaturesWidget(QWidget *parent)
         }
     }
 
-//    if(!m_adapter->isDiscoverable()){
-//        m_adapter->setDiscoverable(true);
-//        m_adapter->setDiscoverableTimeout(0);
-//    }
     bluetooth_tray_icon = new QSystemTrayIcon(this);
     adapterChangeFUN();
 
     cur_adapter_address = m_adapter->address();
 
-    bluetoothAgent = new BluetoothAgent(this);
-    bluetoothObexAgent = new BluetoothObexAgent(this);
-    connect(bluetoothAgent, &BluetoothAgent::agentRemoveDevice, this, &FeaturesWidget::Remove_device_by_devicePtr);
-    qDebug() << m_manager->registerAgent(bluetoothAgent)->errorText();
     qDebug() << m_adapter->isPowered() << "===========" << m_manager->isBluetoothBlocked();
 
 
     Turn_on_or_off_bluetooth(settings->get("switch").toBool());
-//    if (value = settings->get("switch").toBool() )
-//    if(settings->get("switch").toString() == "false"){
-//        if (!m_manager->isBluetoothBlocked())
-//            m_manager->setBluetoothBlocked(true);
-//    }else{
-//        if(m_manager->isBluetoothBlocked()){
-//            m_manager->setBluetoothBlocked(false);
-//        }
-//        Turn_on_or_off_bluetooth(true);
-//    }
 
     if(File_save_path.isEmpty()){
         settings->set("file-save-path",QVariant::fromValue(QDir::homePath()));
     }
     qDebug() << Q_FUNC_INFO << m_manager->isInitialized() << m_manager->isOperational();
-
-    obex_manager = new BluezQt::ObexManager(this);
-    BluezQt::InitObexManagerJob *obex_job = obex_manager->init();
-    obex_job->exec();
-    qDebug() << Q_FUNC_INFO << obex_manager->isInitialized() << obex_manager->isOperational() << obex_manager->sessions().size();
-
-    if(!obex_manager->isOperational()){
-        BluezQt::PendingCall *call = obex_manager->startService();
-        connect(call,&BluezQt::PendingCall::finished,this,[=](BluezQt::PendingCall *q){
-            QTimer::singleShot(1000,this,[=]{
-                obex_manager->registerAgent(bluetoothObexAgent)->errorText();
-            });
-        });
-    }else{
-        obex_manager->registerAgent(bluetoothObexAgent);
-    }
-    connect(obex_manager,&BluezQt::ObexManager::sessionAdded,this,&FeaturesWidget::file_transfer_session_add);
 
     QPalette palette;
     palette.setBrush(QPalette::Base,QColor(Qt::black));
@@ -341,6 +307,21 @@ void FeaturesWidget::InitTrayMenu()
     tray_Menu->move(bluetooth_tray_icon->geometry().x()+16,bluetooth_tray_icon->geometry().y()-50);
     tray_Menu->exec();
 
+}
+
+void FeaturesWidget::InitAgentAndDbus()
+{
+    session_dbus = new BluetoothDbus(this);
+    connect(session_dbus,&BluetoothDbus::ConnectTheSendingDevice,this,&FeaturesWidget::Pair_device_by_address);
+    connect(session_dbus,&BluetoothDbus::DisconnectTheSendingDevice,this,&FeaturesWidget::Disconnect_device_by_address);
+    connect(session_dbus,&BluetoothDbus::RemoveTheSendingDevice,this,&FeaturesWidget::Remove_device_by_address);
+    connect(session_dbus,&BluetoothDbus::sendTransferMesg,this,&FeaturesWidget::Dbus_file_transfer);
+    connect(session_dbus,&BluetoothDbus::switch_signals,this,&FeaturesWidget::Dbus_bluetooth_switch);
+
+    bluetoothAgent = new BluetoothAgent(this);
+    connect(bluetoothAgent, &BluetoothAgent::agentRemoveDevice, this, &FeaturesWidget::Remove_device_by_devicePtr);
+
+    bluetoothObexAgent = new BluetoothObexAgent(this);
 }
 
 void FeaturesWidget::Pair_device_by_address(QString address)
@@ -773,6 +754,23 @@ void FeaturesWidget::Monitor_sleep_signal()
     }
 }
 
+void FeaturesWidget::M_registerAgent()
+{
+    qDebug() << m_manager->registerAgent(bluetoothAgent)->errorText();
+
+
+    if(!obex_manager->isOperational()){
+        BluezQt::PendingCall *call = obex_manager->startService();
+        connect(call,&BluezQt::PendingCall::finished,this,[=](BluezQt::PendingCall *q){
+            QTimer::singleShot(1000,this,[=]{
+                obex_manager->registerAgent(bluetoothObexAgent)->errorText();
+            });
+        });
+    }else{
+        obex_manager->registerAgent(bluetoothObexAgent);
+    }
+}
+
 void FeaturesWidget::Connect_the_last_connected_device()
 {
     qDebug() << Q_FUNC_INFO << "startDiscovery";
@@ -848,10 +846,10 @@ void FeaturesWidget::adapterChangeFUN()
 
     connect(m_manager,&BluezQt::Manager::adapterRemoved,this,[=](BluezQt::AdapterPtr adapter){
         qDebug() << Q_FUNC_INFO << adapter->address() << adapter->name() <<__LINE__;
-        if(adapter_list.size() == 1)
-        {
-            QMessageBox::warning(NULL,tr("bluetooth"),tr("Bluetooth Adapter Abnormal!!!"),QMessageBox::Yes,QMessageBox::Yes);
-        }
+//        if(adapter_list.size() == 1)
+//        {
+//            QMessageBox::warning(NULL,tr("bluetooth"),tr("Bluetooth Adapter Abnormal!!!"),QMessageBox::Yes,QMessageBox::Yes);
+//        }
 
         adapter_list.removeAll(adapter->address());
         settings->set("adapter-address-list",QVariant::fromValue(adapter_list));
@@ -875,46 +873,32 @@ void FeaturesWidget::adapterChangeFUN()
     });
 
     connect(m_manager,&BluezQt::Manager::adapterAdded,this,[=](BluezQt::AdapterPtr adapter){
-        qDebug() << Q_FUNC_INFO << adapter->address() << adapter->name() <<__LINE__;
+        qDebug() << Q_FUNC_INFO << adapter->address() << adapter->name() << bluetooth_tray_icon->isVisible() << adapter.data()->isPowered() <<__LINE__;
         adapter_list.append(adapter->address());
-        if(adapter_list.size() != 0){
-            if(!bluetooth_tray_icon->isVisible())
-            {
-                bluetooth_tray_icon->setVisible(true);
-                if(settings->get("switch").toString() == "false")
-                {
-                    if(QIcon::hasThemeIcon("bluetooth-error"))
-                        bluetooth_tray_icon->setIcon(QIcon::fromTheme("bluetooth-error"));
-                    else
-                        bluetooth_tray_icon->setIcon(QIcon::fromTheme("bluetooth-active-symbolic"));
-                }
-                else
-                {
-                    bluetooth_tray_icon->setIcon(QIcon::fromTheme("bluetooth-active-symbolic"));
-                }
 
-            }
-        }
+        if (!bluetooth_tray_icon->isVisible())
+            bluetooth_tray_icon->setVisible(true);
+
         settings->set("adapter-address-list",QVariant::fromValue(adapter_list));
+        m_adapter = adapter.data();
+        connect(m_adapter,&BluezQt::Adapter::poweredChanged,this,&FeaturesWidget::adapterPoweredChanged);
     });
 
     connect(m_manager,&BluezQt::Manager::adapterChanged,this,[=](BluezQt::AdapterPtr adapter){
         qDebug() << Q_FUNC_INFO <<__LINE__;
-        m_adapter = adapter.data();
-//        connect(m_adapter,&BluezQt::Adapter::poweredChanged,this,&FeaturesWidget::adapterPoweredChanged);
-//        if(m_adapter->address() == cur_adapter_address)
-//            QTimer::singleShot(1000,this,[=]{
-//                Connect_the_last_connected_device();
-//            });
-//        else{
-//            QTimer::singleShot(1000,this,[=]{
-//                cur_adapter_address = m_adapter->address();
-//            });
-//        }
+
+        if (m_adapter->address() == adapter.data()->address())
+            m_adapter = adapter.data();
     });
 
     connect(m_manager,&BluezQt::Manager::usableAdapterChanged,this,[=](BluezQt::AdapterPtr adapter){
         qDebug() << Q_FUNC_INFO <<__LINE__;
+    });
+
+    connect(m_manager,&BluezQt::Manager::operationalChanged,this,[=](bool status){
+        qDebug() <<  Q_FUNC_INFO << status;
+        NotifyOnOff();
+        M_registerAgent();
     });
 }
 // ===========================================END========================================================
